--- a/templates/braden/edit.html.twig
+++ b/templates/braden/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Braden{% endblock %}
+{% block title %}ModificaBraden{% endblock %}
 
 {% block body %}
     <h1>Modifica scheda Braden</h1>
