--- a/templates/chiusura_servizio/edit.html.twig
+++ b/templates/chiusura_servizio/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit ChiusuraServizio{% endblock %}
+{% block title %}ModificaChiusuraServizio{% endblock %}
 
 {% block body %}
     <h1>Modifica Chiusura Servizio</h1>
