--- a/templates/chiusura_servizio/new.html.twig
+++ b/templates/chiusura_servizio/new.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New ChiusuraServizio{% endblock %}
+{% block title %}NuovaSchedaChiusuraServizio{% endblock %}
 
 {% block body %}
-    <h1>Crea nuova scheda Chiusura Servizio</h1>
+    <h1>Nuova scheda Chiusura Servizio</h1>
 
     {{ include('chiusura_servizio/_form.html.twig') }}
 
