--- a/templates/lesioni/edit.html.twig
+++ b/templates/lesioni/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Lesioni{% endblock %}
+{% block title %}ModificaLesioni{% endblock %}
 
 {% block body %}
     <h1>Modifica scheda Lesioni</h1>
