--- a/templates/lesioni/new.html.twig
+++ b/templates/lesioni/new.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Lesioni{% endblock %}
+{% block title %}NuovaSchedaLesioni{% endblock %}
 
 {% block body %}
-    <h1>Crea nuova scheda Lesioni</h1>
+    <h1>Nuova scheda Lesioni</h1>
 
     {{ include('lesioni/_form.html.twig') }}
 
