--- a/templates/parere_mmg/new.html.twig
+++ b/templates/parere_mmg/new.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New ParereMMG{% endblock %}
+{% block title %}NuovoParereMMG{% endblock %}
 
 {% block body %}
-    <h1>Crea Nuovo Parere MMG</h1>
+    <h1>Nuovo Parere MMG</h1>
 
     {{ include('parere_mmg/_form.html.twig') }}
 
