--- a/templates/spmsq/edit.html.twig
+++ b/templates/spmsq/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit SPMSQ{% endblock %}
+{% block title %}ModificaSPMSQ{% endblock %}
 
 {% block body %}
     <h1>Modifica scheda SPMSQ</h1>
