--- a/templates/spmsq/new.html.twig
+++ b/templates/spmsq/new.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New SPMSQ{% endblock %}
+{% block title %}NuovaSPMSQ{% endblock %}
 
 {% block body %}
-    <h1>Crea nuova scheda Valutazione Cognitiva:SPMSQ</h1>
+    <h1>Nuova scheda Valutazione Cognitiva:SPMSQ</h1>
 
     {{ include('spmsq/_form.html.twig') }}
 
