--- a/templates/tinetti/edit.html.twig
+++ b/templates/tinetti/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Tinetti{% endblock %}
+{% block title %}ModificaTinetti{% endblock %}
 
 {% block body %}
     <h1>Modifica scheda Tinetti</h1>
