--- a/templates/tinetti/new.html.twig
+++ b/templates/tinetti/new.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Tinetti{% endblock %}
+{% block title %}NuovaTinetti{% endblock %}
 
 {% block body %}
-    <h1>Crea nuova scheda Tinetti</h1>
+    <h1>Nuova scheda Tinetti</h1>
 
     {{ include('tinetti/_form.html.twig') }}
 
