--- a/templates/valutazione_figura_professionale/edit.html.twig
+++ b/templates/valutazione_figura_professionale/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit ValutazioneFiguraProfessionale{% endblock %}
+{% block title %}ModificaValutazioneFiguraProfessionale{% endblock %}
 
 {% block body %}
     <h1>Modifica Valutazione Figura Professionale</h1>
