--- a/templates/valutazione_figura_professionale/new.html.twig
+++ b/templates/valutazione_figura_professionale/new.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New ValutazioneFiguraProfessionale{% endblock %}
+{% block title %}NuovaValutazioneFiguraProfessionale{% endblock %}
 
 {% block body %}
-    <h1>Crea nuova Valutazione Figura Professionale</h1>
+    <h1>Nuova scheda Valutazione Figura Professionale</h1>
 
     {{ include('valutazione_figura_professionale/_form.html.twig') }}
 
