--- a/templates/valutazione_generale/show.html.twig
+++ b/templates/valutazione_generale/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Valutazione Generale{% endblock %}
+{% block title %}ValutazioneGenerale{% endblock %}
 
 {% block body %}
     <h1>Valutazione Generale</h1>
@@ -25,7 +25,7 @@
             </tr>
             <tr>
                 <th>Rischio infettivo</th>
-                <td>{{ valutazione_generale.rischioInfettivo ? 'Yes' : 'No' }}</td>
+                <td>{{ valutazione_generale.rischioInfettivo ? 'Si' : 'No' }}</td>
             </tr>
             <tr>
                 <th>Diagnosi</th>
