--- a/templates/vas/edit.html.twig
+++ b/templates/vas/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Vas{% endblock %}
+{% block title %}ModificaVas{% endblock %}
 
 {% block body %}
     <h1>Modifica scheda Vas</h1>
