--- a/templates/vas/new.html.twig
+++ b/templates/vas/new.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Vas{% endblock %}
+{% block title %}NuovaVas{% endblock %}
 
 {% block body %}
-    <h1>Crea nuova scheda Vas</h1>
+    <h1>Nuova scheda Vas</h1>
 
     {{ include('vas/_form.html.twig') }}
 
