--- a/templates/barthel/_delete_form.html.twig
+++ b/templates/barthel/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('app_barthel_delete', {'id': barthel.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ barthel.id) }}">
-    <button class="btn">Cancella</button>
+    <button class="btn">Elimina</button>
 </form>
