--- a/templates/barthel/show.html.twig
+++ b/templates/barthel/show.html.twig
@@ -61,7 +61,7 @@
             </tr>
             <tr>
                 <th>Deambulazione</th>
-                <td>{{ barthel.deambulazione ? 'Yes' : 'No' }}</td>
+                <td>{{ barthel.deambulazione ? 'Si' : 'No' }}</td>
             </tr>
             <tr>
                 <th>DeambulazioneValida</th>
@@ -78,9 +78,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_barthel_index') }}">torna alla lista</a>
+    <a href="{{ path('app_barthel_index') }}">Torna alla lista</a>
 
-    <a href="{{ path('app_barthel_edit', {'id': barthel.id}) }}">modifica</a>
+    <a href="{{ path('app_barthel_edit', {'id': barthel.id}) }}">Modifica</a>
 
     {{ include('barthel/_delete_form.html.twig') }}
 {% endblock %}
