--- a/templates/braden/index.html.twig
+++ b/templates/braden/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Braden index{% endblock %}
+{% block title %}ElencoBraden{% endblock %}
 
 {% block body %}
     <h1>Braden</h1>
@@ -18,7 +18,7 @@
                 <th>Frizione Scivolamento</th>
                 <th>Data Valutazione</th>
                 <th>Totale</th>
-                <th>actions</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -35,17 +35,17 @@
                 <td>{{ braden.dataValutazione ? braden.dataValutazione|date('Y-m-d') : '' }}</td>
                 <td>{{ braden.totale }}</td>
                 <td>
-                    <a href="{{ path('app_form_pai_braden_show', {'id': braden.id}) }}">Mostra</a>
+                    <a href="{{ path('app_form_pai_braden_show', {'id': braden.id}) }}">Visualizza</a>
                     <a href="{{ path('app_form_pai_braden_edit', {'id': braden.id}) }}">Modifica</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="12">Nessuna scheda trovata</td>
+                <td colspan="12">Nessuna scheda disponibile</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('app_form_pai_braden_new') }}">Crea nuova scheda</a>
+    <a href="{{ path('app_form_pai_braden_new') }}">Nuova scheda</a>
 {% endblock %}
