--- a/templates/braden/new.html.twig
+++ b/templates/braden/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Braden{% endblock %}
+{% block title %}NuovaBraden{% endblock %}
 
 {% block body %}
-    <h1>Crea nuova scheda Braden</h1>
+    <h1>Nuova scheda Braden</h1>
 
     {{ include('braden/_form.html.twig') }}
 
-    <a href="{{ path('app_form_pai_braden_index') }}">torna alla lista</a>
+    <a href="{{ path('app_form_pai_braden_index') }}">Torna alla lista</a>
 {% endblock %}
