--- a/templates/lesioni/_form.html.twig
+++ b/templates/lesioni/_form.html.twig
@@ -1,4 +1,4 @@
-{{ form_start(form) }}
+{{ form_start(form, {attr: {'novalidate': 'novalidate'}}) }}
 <div class="row">
         <div class="col">
             {{ form_row(form.nome) }}
