--- a/templates/spmsq/index.html.twig
+++ b/templates/spmsq/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}SPMSQ index{% endblock %}
+{% block title %}ElencoSPMSQ{% endblock %}
 
 {% block body %}
     <h1>Valutazione Cognitiva:SPMSQ </h1>
@@ -22,7 +22,7 @@
                 <th>Qual è il cognome da ragazza si sua madre?</th>
                 <th>Sottragga da 20 tre e poi ancora fino in fondo</th>
                 <th>Totale</th>
-                <th>actions</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -43,17 +43,17 @@
                 <td>{{ s_p_m_s_q.sottrazione ? 'Si' : 'No' }}</td>
                 <td>{{ s_p_m_s_q.totale }}</td>
                 <td>
-                    <a href="{{ path('app_s_p_m_s_q_show', {'id': s_p_m_s_q.id}) }}">Mostra</a>
+                    <a href="{{ path('app_s_p_m_s_q_show', {'id': s_p_m_s_q.id}) }}">Visualizza</a>
                     <a href="{{ path('app_s_p_m_s_q_edit', {'id': s_p_m_s_q.id}) }}">Modifica</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="15">nessuna scheda trovata</td>
+                <td colspan="15">Nessuna scheda disponibile</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('app_s_p_m_s_q_new') }}">Crea nuova scheda</a>
+    <a href="{{ path('app_s_p_m_s_q_new') }}">Nuova scheda</a>
 {% endblock %}
