--- a/templates/valutazione_figura_professionale/_delete_form.html.twig
+++ b/templates/valutazione_figura_professionale/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('app_valutazione_figura_professionale_delete', {'id': valutazione_figura_professionale.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ valutazione_figura_professionale.id) }}">
-    <button class="btn">Elimina</button>
+    <button class="btn">Elimina scheda</button>
 </form>
