--- a/templates/valutazione_generale/_delete_form.html.twig
+++ b/templates/valutazione_generale/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('app_valutazione_generale_delete', {'id': valutazione_generale.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ valutazione_generale.id) }}">
-    <button class="btn">Cancella valutazione</button>
+    <button class="btn">Elimina scheda</button>
 </form>
