--- a/templates/valutazione_generale/edit.html.twig
+++ b/templates/valutazione_generale/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Modifica scheda Valutazione Generale{% endblock %}
+{% block title %}ModificaSchedaValutazioneGenerale{% endblock %}
 
 {% block body %}
     <h1>Modifica Valutazione Generale</h1>
 
     {{ include('valutazione_generale/_form.html.twig', {'button_label': 'Modifica'}) }}
 
-    <a href="{{ path('app_valutazione_generale_index') }}">torna alla lista</a>
+    <a href="{{ path('app_valutazione_generale_index') }}">Torna alla lista</a>
 
     {{ include('valutazione_generale/_delete_form.html.twig') }}
 {% endblock %}
