--- a/templates/valutazione_generale/new.html.twig
+++ b/templates/valutazione_generale/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Nuova Valutazione Generale{% endblock %}
+{% block title %}NuovaValutazioneGenerale{% endblock %}
 
 {% block body %}
     <h1>Valutazione Generale</h1>
 
     {{ include('valutazione_generale/_form.html.twig') }}
 
-    <a href="{{ path('app_valutazione_generale_index') }}">torna alla lista</a>
+    <a href="{{ path('app_valutazione_generale_index') }}">Torna alla lista</a>
 {% endblock %}
