--- a/templates/scheda_pai/index.html.twig
+++ b/templates/scheda_pai/index.html.twig
@@ -48,16 +48,16 @@
                         Seleziona
                         </button>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="{{ path('app_valutazione_generale_new')}}">Valutazione Generale</a></li>
-                        <li><a class="dropdown-item" href="{{ path('app_valutazione_figura_professionale_new')}}">Valutazione Figura Professionale</a></li>
-                        <li><a class="dropdown-item" href="{{ path('app_parere_mmg_new')}}">Parere MMG</a></li>
-                        <li><a class="dropdown-item" href="{{ path('app_chiusura_servizio_new')}}">Chiusura servizio</a></li>
-                        <li><a class="dropdown-item" href="{{ path('app_barthel_new')}}">Barthel</a></li>
-                        <li><a class="dropdown-item" href="{{ path('app_form_pai_braden_new')}}">Braden</a></li>
-                        <li><a class="dropdown-item" href="{{ path('app_s_p_m_s_q_new')}}">SPMSQ</a></li>
-                        <li><a class="dropdown-item" href="{{ path('app_tinetti_new')}}">Tinetti</a></li>
-                        <li><a class="dropdown-item" href="{{ path('app_vas_new')}}">Vas</a></li>
-                        <li><a class="dropdown-item" href="{{ path('app_lesioni_new')}}">Lesioni</a></li>
+                        <li><a class="dropdown-item" href="{{ path('app_valutazione_generale_new', {'id_pai': scheda_pai.id})}}">Valutazione Generale</a></li>
+                        <li><a class="dropdown-item" href="{{ path('app_valutazione_figura_professionale_new', {'id_pai': scheda_pai.id})}}">Valutazione Figura Professionale</a></li>
+                        <li><a class="dropdown-item" href="{{ path('app_parere_mmg_new', {'id_pai': scheda_pai.id})}}">Parere MMG</a></li>
+                        <li><a class="dropdown-item" href="{{ path('app_chiusura_servizio_new', {'id_pai': scheda_pai.id})}}">Chiusura servizio</a></li>
+                        <li><a class="dropdown-item" href="{{ path('app_barthel_new', {'id_pai': scheda_pai.id})}}">Barthel</a></li>
+                        <li><a class="dropdown-item" href="{{ path('app_form_pai_braden_new', {'id_pai': scheda_pai.id})}}">Braden</a></li>
+                        <li><a class="dropdown-item" href="{{ path('app_s_p_m_s_q_new', {'id_pai': scheda_pai.id})}}">SPMSQ</a></li>
+                        <li><a class="dropdown-item" href="{{ path('app_tinetti_new', {'id_pai': scheda_pai.id})}}">Tinetti</a></li>
+                        <li><a class="dropdown-item" href="{{ path('app_vas_new', {'id_pai': scheda_pai.id})}}">Vas</a></li>
+                        <li><a class="dropdown-item" href="{{ path('app_lesioni_new', {'id_pai': scheda_pai.id})}}">Lesioni</a></li>
                         
                     </ul>
                     </div>
