--- a/templates/scheda_pai/new.html.twig
+++ b/templates/scheda_pai/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('scheda_pai/_form.html.twig') }}
 
-    <a href="{{ path('app_scheda_pai_index') }}">Torna alla lista</a>
+    <button type="button"><a class="btn btn-danger" href="{{ path('app_scheda_pai_index') }}">Annulla</a></button>
 {% endblock %}
